syntax = "proto3";

package configs;

option go_package = "github.com/pokt-network/pocket/runtime/configs";

message KeybaseConfig {
	oneof config {
		KeybaseFileConfig file = 1;
		KeybaseVaultConfig vault = 2;
	}
}


// KeybaseFileConfig is the configuration for the File Keybase
message KeybaseFileConfig {
  // Path to the keybase file
	string path = 1;
}

// KeybaseVaultConfig is the configuration for the Hashicorp Vault Keybase
message KeybaseVaultConfig {
    // Vault address
	  string addr = 1;
    // Vault token
	  string token = 2;
    // Vault mount path
	  string mount_path = 3;
}
